gramaticaC_fca.txt

//inicio programa, composto por sequencia de instruções
programa:   instruções

//define 1/+ instrucoes, comandos terminado por ponto e virgula/;
instruções: instruçao ';' instruçoes
            | instruçao ';'

//3tipos de instrucoes possiveis
instrucao  : escrita
           | saida
           | atribuicao

//valor é enviado para a saida
escrita: ESCREVER expre

//valor da expressao é mostrado
saida: SAIDA '('  expre  ')'

//variavel é associada a uma expressao aritmetica ou valor de entrada
atribuicao : VAR '=' expre
           | VAR '=' ENTRADA '(' ')'


//expre/termo/fator -> definem as expressoes aritmeticas
//contem operadores de adicao e de subtracao
expre: expre '+' termo
        |expre '-'
        |termo

//contem operadores de multiplicacao e divisao
termo: termo '*' fator
        |termo '/' fator
        |fator

//contem numeros, variaveis, e subexpressoes entre os ( )
fator: NUMBER
        |VAR
        |'(' expre')'
